# stereo-visual-odometry

./: Cargo.toml  README.md
data/: cam0.json  cam1.json  extrinsics.json
data/tum_vi/: cam0.json  cam1.json  extrinsics.json
src/: io.rs  lib.rs  main.rs  optimization.rs  stereo_estimator.rs  triangulate.rs  types.rs  visualize.rs
