[package]
name = "stereo-visual-odometry"
version = "0.1.0"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Patch tracker"
homepage = "https://github.com/powei-lin/tiny-vo-rs"
repository = "https://github.com/powei-lin/tiny-vo-rs"
keywords = ["visual-odometry", "opticalflow"]
categories = ["science", "mathematics"]
exclude = [
    "docs/*.avif",
]

[dependencies]
camera-intrinsic-model = "0.3.1"
env_logger = "0.11.5"
glob = "0.3.1"
image = "0.25.5"
ndarray = "0.16.1"
patch-tracker = "0.2.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
rerun = "0.17.0"
tiny-solver = "0.11.0"
